--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "scripts": {
     "clean": "mkdir -p public/ && rm -rf public/*",
-    "build:assets": "cp -r app/assets/* public/ ",
-    "build:scripts": "mkdir -p public/js && browserify app/js/app.js -o public/js/app.js -t babelify",
+    "build:assets": "cp -r app/assets/* public/",
     "build:css": "mkdir -p public/css && pleeease compile app/css/* to public/css/app.css ",
-    "build": "npm run build:scripts && npm run build:assets && npm run build:css",
-    "dev": "npm run clean && npm run build && npm run watch",
+    "build": "npm run build:assets && npm run build:css",
+    "dev": " npm run clean && npm run build && parallelshell 'npm run watch' 'http-server ./public'",
     "watch": "npm run watch:assets & npm run watch:css & npm run watch:scripts",
     "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
     "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
-    "watch:scripts": "chokidar 'app/js/*' -c 'echo `date` && npm run build:scripts -s'"
+    "watch:scripts": "mkdir -p public/js && watchify app/js/app.js -o public/js/app.js -t babelify -t riotify"
   },
   "repository": {
     "type": "git",
@@ -29,7 +28,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "chokidar-cli": "^1.2.0",
-    "pleeease": "^4.0.4"
+    "pleeease": "^4.0.4",
+    "riot": "^2.3.15",
+    "riotify": "^1.0.0"
   },
   "dependencies": {}
 }
