--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "chokidar-cli": "^1.2.0",
+    "parallelshell": "^2.0.0",
     "pleeease": "^4.0.4",
     "riot": "^2.3.15",
-    "riotify": "^1.0.0"
+    "riotify": "^1.0.0",
+    "watchify": "^3.7.0"
   },
   "dependencies": {}
 }
