--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "clean": "mkdir -p public/ && rm -rf public/*",
     "build:assets": "cp -r app/assets/* public/",
-    "build:css": "mkdir -p public/css && pleeease compile app/css/* to public/css/app.css ",
+    "build:css": "mkdir -p public/css && mkdir -p public/css && pleeease compile node_modules/normalize.css/normalize.css node_modules/font-awesome/css/font-awesome.min.css app/css/* to public/css/app.css",
     "build": "npm run build:assets && npm run build:css",
-    "dev": " npm run clean && npm run build && parallelshell 'npm run watch' 'http-server ./public'",
-    "watch": "npm run watch:assets & npm run watch:css & npm run watch:scripts",
+    "dev": " npm run clean && npm run build && parallelshell 'npm run watch' 'http-server ./public' -s",
+    "watch": "npm run watch:scripts & npm run watch:assets & npm run watch:css",
     "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
     "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
-    "watch:scripts": "mkdir -p public/js && watchify app/js/app.js -o public/js/app.js -t babelify -t riotify -v true"
+    "watch:scripts": "mkdir -p public/js && watchify -d app/js/app.js -o public/js/app.js -t babelify -t riotify -v true"
   },
   "repository": {
     "type": "git",
@@ -34,5 +34,10 @@
     "riotify": "^1.0.0",
     "watchify": "^3.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "font-awesome": "^4.5.0",
+    "jquery": "^2.2.0",
+    "lodash": "^4.5.0",
+    "normalize.css": "^3.0.3"
+  }
 }
