--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^2.2.0",
     "jsmediatags": "^3.0.5",
     "lodash": "^4.5.0",
+    "moment": "^2.11.2",
     "normalize.css": "^3.0.3",
     "sortablejs": "^1.4.2"
   }
