--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "MeetMusic",
-  "version": "0.0.1",
-  "description": "Listen everything, everywhere",
-  "main": "index.js",
-  "scripts": {
-    "clean": "mkdir -p public/ && rm -rf public/*",
-    "build:assets": "cp -r app/assets/* public/",
-    "build:css": "mkdir -p public/css && mkdir -p public/css && pleeease compile node_modules/normalize.css/normalize.css node_modules/font-awesome/css/font-awesome.min.css app/css/* to public/css/app.css",
-    "build": "npm run build:assets && npm run build:css",
-    "dev": " npm run clean && npm run build && parallelshell 'npm run watch' 'http-server ./public' -s",
-    "watch": "npm run watch:scripts & npm run watch:assets & npm run watch:css",
-    "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
-    "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
-    "watch:scripts": "mkdir -p public/js && watchify -d app/js/app.js -o public/js/app.js -t babelify -t riotify -v true"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mejjjor/starter-kit_es6.git"
-  },
-  "author": "Mejjjor",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mejjjor/meetMusic/issues"
-  },
-  "homepage": "https://github.com/mejjjor/meetMusic#readme",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "chokidar-cli": "^1.2.0",
-    "parallelshell": "^2.0.0",
-    "pleeease": "^4.0.4",
-    "riot": "^2.3.15",
-    "riotify": "^1.0.0",
-    "watchify": "^3.7.0"
-  },
-  "dependencies": {
-    "font-awesome": "^4.5.0",
-    "id3js": "^1.1.3",
-    "jquery": "^2.2.0",
-    "jsmediatags": "^3.0.5",
-    "lodash": "^4.5.0",
-    "moment": "^2.11.2",
-    "normalize.css": "^3.0.3",
-    "sortablejs": "^1.4.2"
-  }
+    "name": "MeetMusic",
+    "version": "0.0.1",
+    "description": "Listen everything, everywhere",
+    "main": "index.js",
+    "scripts": {
+        "clean": "mkdir -p public/ && rm -rf public/*",
+        "build:assets": "cp -r app/assets/* public/",
+        "build:css": "mkdir -p public/css && mkdir -p public/css && pleeease compile node_modules/normalize.css/normalize.css node_modules/font-awesome/css/font-awesome.min.css app/css/* to public/css/app.css",
+        "build": "npm run build:assets && npm run build:css ",
+        "dev": " npm run clean && npm run build && parallelshell 'npm run watch' 'http-server ./public' -s",
+        "watch": "npm run watch:scripts & npm run watch:assets & npm run watch:css",
+        "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
+        "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
+        "watch:scripts": "mkdir -p public/js && watchify -d app/js/app.js -o public/js/app.js -t babelify -t riotify -v true"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mejjjor/starter-kit_es6.git"
+    },
+    "author": "Mejjjor",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mejjjor/meetMusic/issues"
+    },
+    "homepage": "https://github.com/mejjjor/meetMusic#readme",
+    "devDependencies": {
+        "babel-preset-es2015": "^6.3.13",
+        "babelify": "^7.2.0",
+        "chokidar-cli": "^1.2.0",
+        "parallelshell": "^2.0.0",
+        "pleeease": "^4.0.4",
+        "riot": "^2.3.15",
+        "riotify": "^1.0.0",
+        "watchify": "^3.7.0"
+    },
+    "dependencies": {
+        "attachmediastream": "^1.3.5",
+        "datachannel": "^1.0.0",
+        "filetransfer": "^2.0.4",
+        "font-awesome": "^4.5.0",
+        "id3js": "^1.1.3",
+        "jquery": "^2.2.0",
+        "lodash": "^4.5.0",
+        "moment": "^2.11.2",
+        "rtcpeerconnection": "^4.0.0",
+        "socket.io-client": "^1.3.7",
+        "localmedia": "^2.0.0",
+        "mockconsole": "0.0.1",
+        "normalize.css": "^3.0.3",
+        "sortablejs": "^1.4.2",
+        "webrtcsupport": "^2.2.0",
+        "wildemitter": "1.x"
+    }
 }
