--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-    "name": "MeetMusic",
-    "version": "0.0.1",
-    "description": "Listen everything, everywhere",
-    "main": "index.js",
-    "scripts": {
-        "clean": "mkdir -p public/ && rm -rf public/*",
-        "build:assets": "cp -r app/assets/* public/",
-        "build:css": "mkdir -p public/css && mkdir -p public/css && pleeease compile node_modules/normalize.css/normalize.css node_modules/font-awesome/css/font-awesome.min.css app/css/* to public/css/app.css",
-        "build": "npm run build:assets && npm run build:css ",
-        "dev": " npm run clean && npm run build && npm run watch",
-        "watch": "npm run watch:riot & npm run watch:scripts & npm run watch:assets & npm run watch:css",
-        "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
-        "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
-        "watch:scripts": "mkdir -p public/js && watchify -d app/js/app.js -o public/js/app.js -t riotify -v true",
-        "watch:riot": "riot -w app/js/tags/ app/js/tags/tags.js",
-        "prod": "babel app/js/tags/tags.js --out-file app/js/tags/tags.js && browserify app/js/app.js -o public/js/app.temp.js -v true && uglifyjs public/js/app.temp.js > public/js/app.js && rm -f public/js/app.temp.js"
-
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/mejjjor/starter-kit_es6.git"
-    },
-    "author": "Mejjjor",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/mejjjor/meetMusic/issues"
-    },
-    "homepage": "https://github.com/mejjjor/meetMusic#readme",
-    "devDependencies": {
-        "babel-plugin-external-helpers-2": "^6.3.13",
-        "babel-preset-es2015": "^6.3.13",
-        "babelify": "^7.2.0",
-        "chokidar-cli": "^1.2.0",
-        "express": "3.x.x",
-        "parallelshell": "^2.0.0",
-        "pleeease": "^4.0.4",
-        "riot": "^2.3.15",
-        "riotify": "^1.0.0",
-        "watchify": "^3.7.0",
-        "babel-core": "^6.3.26",
-        "babel-preset-stage-2": "*",
-        "babel-preset-stage-0": "*",
-        "babel-preset-es2015-riot": "*"
-    },
-    "dependencies": {
-        "attachmediastream": "^1.3.5",
-        "datachannel": "^1.0.0",
-        "filetransfer": "^2.0.4",
-        "font-awesome": "^4.5.0",
-        "id3js": "^1.1.3",
-        "jquery": "^2.2.0",
-        "lodash": "^4.5.0",
-        "moment": "^2.11.2",
-        "rtcpeerconnection": "^4.0.0",
-        "socket.io-client": "^1.3.7",
-        "localmedia": "^2.0.0",
-        "mockconsole": "0.0.1",
-        "normalize.css": "^3.0.3",
-        "sortablejs": "^1.4.2",
-        "webrtcsupport": "^2.2.0",
-        "wildemitter": "1.x"
-    }
+  "name": "MeetMusic",
+  "version": "0.0.1",
+  "description": "Listen everything, everywhere",
+  "main": "index.js",
+  "scripts": {
+    "clean": "mkdir -p public/ && rm -rf public/*",
+    "build:assets": "cp -r app/assets/* public/",
+    "build:css": "mkdir -p public/css && mkdir -p public/css && pleeease compile node_modules/normalize.css/normalize.css node_modules/font-awesome/css/font-awesome.min.css app/css/* to public/css/app.css",
+    "build": "npm run build:assets && npm run build:css ",
+    "dev": " npm run clean && npm run build && npm run watch",
+    "watch": "npm run watch:riot & npm run watch:scripts & npm run watch:assets & npm run watch:css",
+    "watch:assets": "chokidar 'app/assets/*' -c 'echo `date` && npm run build:assets -s'",
+    "watch:css": "chokidar 'app/css/*' -c 'echo `date` && npm run build:css -s'",
+    "watch:scripts": "mkdir -p public/js && watchify -d app/js/app.js -o public/js/app.js -t riotify -v true",
+    "watch:riot": "riot -w app/js/tags/ app/js/tags/tags.js",
+    "prod": "babel app/js/tags/tags.js --out-file app/js/tags/tags.js && browserify app/js/app.js -o public/js/app.temp.js -v true && uglifyjs public/js/app.temp.js > public/js/app.js && rm -f public/js/app.temp.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mejjjor/starter-kit_es6.git"
+  },
+  "author": "Mejjjor",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mejjjor/meetMusic/issues"
+  },
+  "homepage": "https://github.com/mejjjor/meetMusic#readme",
+  "devDependencies": {
+    "babel-core": "^6.3.26",
+    "babel-plugin-external-helpers-2": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-riot": "*",
+    "babel-preset-stage-0": "*",
+    "babel-preset-stage-2": "*",
+    "babelify": "^7.2.0",
+    "chokidar-cli": "^1.2.0",
+    "express": "3.x.x",
+    "parallelshell": "^2.0.0",
+    "pleeease": "^4.0.4",
+    "riot": "^2.3.15",
+    "riotify": "^1.0.0",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "attachmediastream": "^1.3.5",
+    "datachannel": "^1.0.0",
+    "filetransfer": "^2.0.4",
+    "font-awesome": "^4.5.0",
+    "id3js": "^1.1.3",
+    "jquery": "^2.2.0",
+    "localmedia": "^2.0.0",
+    "lodash": "^4.5.0",
+    "mockconsole": "0.0.1",
+    "moment": "^2.11.2",
+    "nanobar": "^0.2.1",
+    "normalize.css": "^3.0.3",
+    "nprogress": "^0.2.0",
+    "rtcpeerconnection": "^4.0.0",
+    "socket.io-client": "^1.3.7",
+    "sortablejs": "^1.4.2",
+    "webrtcsupport": "^2.2.0",
+    "wildemitter": "1.x"
+  }
 }
